orion-proxy/conf/envoy-rev.yaml
application_log_config:
  log_format:
    text_format: "%Y-%m-%dT%T.%fZ\t%l\tenvoy %n %g:%#\t%v\tthread=%t"
node:
  id: >-
    sidecar~10.244.0.19~details-v1-766844796b-2llwc.default~default.svc.cluster.local
  cluster: details.default
  locality: {}
  metadata:
    ANNOTATIONS:
      istio.io/rev: default
      kubectl.kubernetes.io/default-container: details
      kubectl.kubernetes.io/default-logs-container: details
      kubernetes.io/config.seen: '2025-09-09T09:16:26.431061397Z'
      kubernetes.io/config.source: api
      prometheus.io/path: /stats/prometheus
      prometheus.io/port: '15020'
      prometheus.io/scrape: 'true'
      sidecar.istio.io/status: >-
        {"initContainers":["istio-init","istio-proxy"],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"],"imagePullSecrets":null,"revision":"default"}
    APP_CONTAINERS: details
    CLUSTER_ID: Kubernetes
    ENVOY_PROMETHEUS_PORT: 15090
    ENVOY_SKIP_DEPRECATED_LOGS: 'true'
    ENVOY_STATUS_PORT: 15021
    INSTANCE_IPS: 10.244.0.19
    INTERCEPTION_MODE: REDIRECT
    ISTIO_PROXY_SHA: dd6dd2104dc107fd5f5da434f1a0424ec1099943
    ISTIO_VERSION: 1.28-dev
    LABELS:
      app: details
      security.istio.io/tlsMode: istio
      service.istio.io/canonical-name: details
      service.istio.io/canonical-revision: v1
      version: v1
    MESH_ID: cluster.local
    METADATA_DISCOVERY: 'false'
    NAME: details-v1-766844796b-2llwc
    NAMESPACE: default
    NODE_NAME: envoy-gateway-control-plane
    OWNER: 'kubernetes://apis/apps/v1/namespaces/default/deployments/details-v1'
    PILOT_SAN:
      - istiod.istio-system.svc
    POD_PORTS: '[{"containerPort":9080,"protocol":"TCP"}]'
    PROXY_CONFIG:
      binaryPath: /usr/local/bin/orion
      concurrency: 2
      configPath: ./etc/istio/proxy
      controlPlaneAuthPolicy: MUTUAL_TLS
      discoveryAddress: 'istiod.istio-system.svc:15012'
      drainDuration: 45s
      proxyAdminPort: 15000
      serviceCluster: istio-proxy
      statNameLength: 189
      statusPort: 15020
      terminationDrainDuration: 5s
    SERVICE_ACCOUNT: bookinfo-details
    WORKLOAD_IDENTITY_SOCKET_FILE: socket
    WORKLOAD_NAME: details-v1
layered_runtime:
  layers:
    - name: global config
      static_layer:
        'envoy.deprecated_features:envoy.config.listener.v3.Listener.hidden_envoy_deprecated_use_original_dst': true
        envoy.reloadable_features.http_reject_path_with_fragment: false
        overload.global_downstream_max_connections: '2147483647'
        re2.max_program_size.error_level: '32768'
    - name: admin
      admin_layer: {}
bootstrap_extensions:
  - name: envoy.bootstrap.internal_listener
    typed_config:
      '@type': type.googleapis.com/udpa.type.v1.TypedStruct
      type_url: >-
        type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener
      value:
        buffer_size_kb: 64
stats_config:
  use_all_default_tags: false
  stats_tags:
    - tag_name: cluster_name
      regex: ^cluster(\.(.+);)
    - tag_name: http_conn_manager_prefix
      regex: '^http\.(((?:[_.[:digit:]\w]*|[_\[\]aAbBcCdDeEfF[:digit:]\w\:]*));\.)'
    - tag_name: thread_name
      regex: ^server(\.(.+))\.watchdog
    - tag_name: tcp_prefix
      regex: ^tcp\.((.*?)\.)\w+?$
    - regex: '_rq(_(\d{3}))$'
      tag_name: response_code
    - tag_name: response_code_class
      regex: _rq(_(\dxx))$
    - tag_name: http_conn_manager_listener_prefix
      regex: >-
        ^listener(?=\.).*?\.http\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)
    - tag_name: listener_address
      regex: '^listener\.(((?:[_.[:digit:]]*|[_\[\]aAbBcCdDeEfF[:digit:]]*))\.)'
    - tag_name: mongo_prefix
      regex: ^mongo\.(.+?)\.(collection|cmd|cx_|op_|delays_|decoding_)(.*?)$
    - regex: (cache\.(.+?)\.)
      tag_name: cache
    - regex: (component\.(.+?)\.)
      tag_name: component
    - regex: (tag\.(.+?);\.)
      tag_name: tag
    - regex: (wasm_filter\.(.+?)\.)
      tag_name: wasm_filter
    - tag_name: authz_enforce_result
      regex: rbac(\.(allowed|denied))
    - tag_name: authz_dry_run_action
      regex: (\.istio_dry_run_(allow|deny)_)
    - tag_name: authz_dry_run_result
      regex: (\.shadow_(allowed|denied))
  stats_matcher:
    inclusion_list:
      patterns:
        - prefix: reporter=
        - prefix: cluster_manager
        - prefix: listener_manager
        - prefix: server
        - prefix: cluster.xds-grpc
        - prefix: wasm
        - suffix: rbac.allowed
        - suffix: rbac.denied
        - suffix: shadow_allowed
        - suffix: shadow_denied
        - safe_regex:
            regex: vhost\..*\.route\..*
        - prefix: component
        - prefix: istio
admin:
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        '@type': >-
          type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/null
  profile_path: /var/lib/istio/data/envoy.prof
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000
dynamic_resources:
  lds_config:
    ads: {}
    initial_fetch_timeout: 0s
    resource_api_version: V3
  cds_config:
    ads: {}
    initial_fetch_timeout: 0s
    resource_api_version: V3
  ads_config:
    api_type: DELTA_GRPC
    set_node_on_first_message_only: true
    transport_api_version: V3
    grpc_services:
      - envoy_grpc:
          cluster_name: xds-grpc
static_resources:
  clusters:
    - name: prometheus_stats
      alt_stat_name: prometheus_stats;
      type: STATIC
      connect_timeout: 0.250s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: prometheus_stats
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      protocol: TCP
                      address: 127.0.0.1
                      port_value: 15000
    - name: agent
      alt_stat_name: agent;
      type: STATIC
      connect_timeout: 0.250s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: agent
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      protocol: TCP
                      address: 127.0.0.1
                      port_value: 15020
    - name: sds-grpc
      alt_stat_name: sds-grpc;
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': >-
            type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: sds-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: ./var/run/secrets/workload-spiffe-uds/socket
    - name: xds-grpc
      alt_stat_name: xds-grpc;
      type: STATIC
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: xds-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: ./etc/istio/proxy/XDS
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
          - priority: HIGH
            max_connections: 100000
            max_pending_requests: 100000
            max_requests: 100000
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      max_requests_per_connection: 1
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': >-
            type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
  listeners:
    - name: 0.0.0.0_15090
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 15090
      ignore_global_conn_limit: true
      bypass_overload_manager: true
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: stats
                route_config:
                  virtual_hosts:
                    - name: backend
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /stats/prometheus
                          route:
                            cluster: prometheus_stats
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    - name: 0.0.0.0_15021
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 15021
      ignore_global_conn_limit: true
      bypass_overload_manager: true
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: agent
                route_config:
                  virtual_hosts:
                    - name: backend
                      domains:
                        - '*'
                      routes:
                        - match:
                            prefix: /healthz/ready
                          route:
                            cluster: agent
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
deferred_stat_options:
  enable_deferred_creation_stats: true
