orion-proxy/conf/envoy-runtime-pipe.yaml

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filterChains:
        - name: filter_chain_http
          filter_chain_match:
            destination_port: 8000
          filters:
            - name: http_gateway
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                statPrefix: ingress_http
                codecType: HTTP1
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      start_child_span: false
                routeConfig:
                  name: basic_http_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/direct-response"
                            headers:
                              - name: ":method"
                                exactMatch: "GET"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "meow! 🐱"
                        - match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                exactMatch: "GET"
                          route:
                            cluster: cluster_http_1
                        - match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                exactMatch: "POST"
                          route:
                            cluster: cluster_http_2

  clusters:
    - name: cluster_http_1
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_http_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /tmp/orion_pipe1.sock
              - endpoint:
                  address:
                    pipe:
                      path: /tmp/orion_pipe1.sock


    - name: cluster_http_2
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_http_2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /tmp/orion_pipe1.sock
              - endpoint:
                  address:
                    pipe:
                      path: /tmp/orion_pipe1.sock
