orion-proxy/conf/orion-runtime-weighted-clusters.yaml
#                                       /proxy/    ---> (cluster1) 192.168.2.10:80
#                                      |
#  http request ---> 192.168.1.1:8080 -|
#                                      |
#                                       (default)  ---> (cluster2) 127.0.0.1:80
#
#                                       /proxy/    ---> (cluster3) 192.168.2.10:81 (h2)
#                                      |
#  http request ---> 192.168.1.1:8081 -|
#                                      |
#                                      / 404
#

logging:
  log_level: "error,orion_proxy=debug,orion_xds=debug,orion_lib=debug"
  log_directory: "."
  log_file: "orion.log"

runtime:
  num_cpus: 1
  num_runtimes: 1
  event_interval: 31 # estimated optimal value
  global_queue_interval: null # default
  max_io_events_per_tick: null # default

envoy_bootstrap:
  static_resources:
    listeners:
      - name: listener_http
        address:
          socket_address: { address: 127.0.0.1, port_value: 8000 }
        filterChains:
          - name: filter_chain_http
            filter_chain_match:
              destination_port: 8000
            filters:
              - name: http_gateway
                typedConfig:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  statPrefix: ingress_http
                  codecType: HTTP1
                  httpFilters:
                    - name: envoy.filters.http.router
                      typedConfig:
                        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                        start_child_span: false
                  routeConfig:
                    name: basic_http_route
                    virtual_hosts:
                      - name: backend
                        domains: ["*"]
                        routes:
                          - match:
                              prefix: "/"
                              headers:
                                - name: ":method"
                                  exactMatch: "GET"
                            route:
                              weighted_clusters:
                                clusters:
                                  - name: cluster_http
                                    weight: "1"
                                  - name: cluster_http
                                    weight: "2"
                                  - name: cluster_http
                                    weight: "3"
                          - match:
                              prefix: "/"
                            route:
                              cluster: cluster_http
      - name: listener_tcp
        address:
          socket_address: { address: 127.0.0.1, port_value: 8001 }
        filterChains:
          - name: filter_chain_tcp
            filter_chain_match:
              destination_port: 8001
            filters:
              - name: tcp_proxy_filter
                typedConfig:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                  statPrefix: ingress_tcp
                  cluster: cluster_tcp

    clusters:
      - name: cluster_http
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN

        load_assignment:
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4001
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4002

      - name: cluster_tcp
        connect_timeout: 0.25s
        type: STATIC
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            upstream_http_protocol_options:
              auto_sni: true
            common_http_protocol_options:
              idle_timeout: 1s
            explicit_http_config:
              http_protocol_options: []

        load_assignment:
          endpoints:
            - lb_endpoints:
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4003
                - endpoint:
                    address:
                      socket_address:
                        address: 127.0.0.1
                        port_value: 4004
